--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "recharts": "^3.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^3.4.13",
-    "tw-animate-css": "^1.3.6"
+    "tw-animate-css": "^1.3.6",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.3.6"
   }
 }
