--- a/package.json
+++ b/package.json
@@ -18,39 +18,32 @@
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
-    "@types/pg": "^8.15.5",
-    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "moment": "^2.30.1",
-    "next": "^15.5.3",
+    "next": "15.4.5",
     "next-themes": "^0.4.6",
     "openai": "^5.20.2",
     "pg": "^8.16.3",
-    "postcss": "^8.5.6",
     "postgres": "^3.4.7",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.2",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.6",
-    "tailwindcss": "^3.3.2"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6"
   }
 }
