--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "openai": "^5.20.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.2",
@@ -41,9 +41,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^24.5.0",
     "@types/pg": "^8.15.5",
+    "@types/react": "^19.1.13",
     "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6"
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5.9.2"
   }
 }
