--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:push": "npx drizzle-kit push",
-    "db:studio": "npx drizzle-kit studio"
+    "db:push": "dotenv -e .env.local -- npx drizzle-kit push",
+    "db:studio": "dotenv -e .env.local -- npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.28.1",
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.23.13",
@@ -45,6 +46,7 @@
     "@types/node": "^24.5.0",
     "@types/pg": "^8.15.5",
     "@types/react": "^19.1.13",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
